--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -209,3 +209,15 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+
+.quantity-input {
+  width: 30px;
+}
+
+.save-quantity-link, .is-editing-quantity .update-quantity-link,  .is-editing-quantity .quantity-label,.quantity-input{
+  display: none;
+}
+
+.is-editing-quantity .quantity-input, .is-editing-quantity .save-quantity-link  {
+  display: initial;
+}
