--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -221,3 +221,7 @@
 .is-editing-quantity .quantity-input, .is-editing-quantity .save-quantity-link  {
   display: initial;
 }
+
+button:disabled {
+  cursor: not-allowed;
+}
